Fix FAQ open/close icons on iOS safari

--- a/organicity/_src/styles/_faqs.scss
+++ b/organicity/_src/styles/_faqs.scss
@@ -71,14 +71,16 @@
 
   &:before {
     left: -2px;
-    -ms-transform: rotate(45deg);
-        transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+        -ms-transform: rotate(45deg);
+            transform: rotate(45deg);
   }
 
   &:after {
     left: 7px;
-    -ms-transform: rotate(-45deg);
-        transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg);
+        -ms-transform: rotate(-45deg);
+            transform: rotate(-45deg);
   }
 
   .faq.is-open & {
